# protofunc

./: .gitignore  README.md  __init__.py  pyproject.toml  pyrofunc.py  requirements.txt
pyrofunc.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_protofunc.py  test_protofunc_gpt.py  test_pyrofunc.py  test_pyrofunc_gpt.py
